--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "discord bot sample on Glitch",
   "main": "main.js",
   "dependencies": {
-    "discord.js": "latest"
+    "discord.js": "latest",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {},
   "scripts": {
