--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "dependencies": {
     "discord.js": "latest",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "log4js": "^6.3.0"
   },
   "devDependencies": {},
   "scripts": {
