--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "node main.js",
     "daemon-start": "forever start main.js",
     "daemon-stop": "forever stop main.js",
-    "deploy-commands": "node deploy-commands.js"
+    "deploy-commands": "node deploy-commands.js",
+    "deploy-commands-global": "node deploy-commands-global.js"
   }
 }
