--- a/package.json
+++ b/package.json
@@ -5,22 +5,21 @@
   "main": "main.js",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^14.13.0",
-    "dotenv": "^10.0.0",
-    "forever": "^4.0.3",
-    "log4js": "^6.3.0",
-    "nodemon": "^2.0.16"
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.3.1",
+    "log4js": "^6.9.1",
+    "nodemon": "^3.0.2"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node main.js",
     "test": "nodemon main.js",
-    "daemon-start": "forever start main.js",
-    "daemon-stop": "forever stop main.js",
     "deploy-commands": "node deploy-commands.js",
     "deploy-commands-global": "node deploy-commands-global.js"
   },
   "engines": {
     "node": "18.x"
+  },
+  "volta": {
+    "node": "18.19.0"
   }
 }
